Add JSON AST representation and ParserTest