@@ -15,7 +15,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
-import java.util.Collections;
+import java.util.Map;
 import java.util.stream.Stream;
 import org.apache.spark.sql.Dataset;
 import org.apache.spark.sql.Row;
@@ -71,7 +71,7 @@ class FhirJsonReadWriteTest {
         .getOrCreate();
     final String resourceUrl = getResourceAsUrl(parameters.resourceFile)
         .toString();
-    final FhirJsonReader reader = new FhirJsonReader(spark, Collections.emptyMap(), "R4",
+    final FhirJsonReader reader = new FhirJsonReader(spark, Map.of("multiLine", "true"), "R4",
         parameters.resourceType);
     final FhirJsonWriter writer = new FhirJsonWriter("R4", parameters.resourceType);
     final Dataset<Row> data = reader.read(resourceUrl);
